Add MethodNode assert, representation and comparator; Rework of label name to index mapping